--- a/src/Components/Shopping/SearchItem.css
+++ b/src/Components/Shopping/SearchItem.css
@@ -6,10 +6,10 @@
     float: right;
     font-size: 17px;
     width: 20PX;
-    height: 24px;
+    height: 22px;
     
-    background: #2196F3;
-    color: white;
+    background:white ;
+    color: #2196F3;
     border: 1px solid black;
     border-left: none;
     cursor: pointer;
@@ -28,6 +28,8 @@
     background: rgb(255, 254, 254);   
     margin: 7px;
     margin-right: 0px;
+
+    height: 20px;
   }
 
 
