--- a/src/Components/Shopping/Container.css
+++ b/src/Components/Shopping/Container.css
@@ -25,7 +25,7 @@
     width: 250px;
     height: 100%;   
     border: 3px solid white;
-    background:green;    
+    background:yellow;    
     /*position: absolute;
     padding: 10px;
     left: 0;
